--- a/140s/Storyboard.storyboard
+++ b/140s/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="12F30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hev-iw-k3G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="12F33" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="DNd-FG-TCS">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
@@ -31,20 +31,50 @@
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="ySF-m6-ive" firstAttribute="leading" secondItem="6I0-5V-hGx" secondAttribute="leading" id="2u2-dN-PgB"/>
                             <constraint firstItem="ySF-m6-ive" firstAttribute="trailing" secondItem="6I0-5V-hGx" secondAttribute="trailing" id="Da6-GP-LyU"/>
                             <constraint firstItem="ySF-m6-ive" firstAttribute="top" secondItem="6I0-5V-hGx" secondAttribute="top" id="xTK-Aa-Ork"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="c6V-Lq-7f5" appends="YES" id="ZbG-tO-mBT"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="d1D-XQ-XjU"/>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="textEdit" destination="ySF-m6-ive" id="sSI-7F-ICs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="slN-EA-2F0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="c6V-Lq-7f5">
+                    <connections>
+                        <action selector="handlePinch:" destination="hev-iw-k3G" id="InP-26-mwu"/>
+                        <outlet property="delegate" destination="hev-iw-k3G" id="sIM-3u-J35"/>
+                    </connections>
+                </pinchGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="707" y="22"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qoc-6X-tGB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DNd-FG-TCS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eTt-4O-OCF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hev-iw-k3G" kind="relationship" relationship="rootViewController" id="N0R-fE-YPC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3AG-Sn-cNL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="181" y="22"/>
         </scene>
